# qr_mpc

./: .gitignore  =3.5.1  CMakeLists.txt  README.md  package.xml
launch/: circle.launch  lemniscate.launch  plot.launch  points.launch  px4_vicon.launch  waypoints.launch
msg/: PositionCommand.msg
scripts/: acados_ocp.json  generate_c_code.m  generate_c_code.py  quadrotor.m  quadrotor.py  quadrotor_gazebo.m
src/: airo_px4_fsm.cpp  airo_px4_fsm.h  airo_px4_node.cpp  example_mission_node.cpp  lala.cpp  px4_control_fsm.h  px4_control_node.cpp  qr_mpc_node.cpp  quadrotor_mpc.cpp  quadrotor_mpc.h  rc_input.cpp  rc_input.h  system_identification.cpp
traj/: circle.m  circle.py  circle.txt  lemniscate.m  lemniscate.txt  points.m  test.m  test.txt  waypoints.m  waypoints.txt
visualization/: initialize.m  visualization.slx  visualization.slxc
